Change label to server

--- a/app/views/data_stamps/new.html.haml
+++ b/app/views/data_stamps/new.html.haml
@@ -36,8 +36,8 @@
               = f.label :p2p, 'P2P'
               = f.check_box :p2p, style: 'display: none;'
             %td
-              = f.label :service, 'Service'
-              = f.check_box :service, style: 'display: none;'
+              = f.label :server, 'Server'
+              = f.check_box :server, style: 'display: none;'
             %td{style: 'background-color: lightgray;'}
     %div.ui.bottom.right.attached.label{style: 'padding: 4px;'}
       =# f.submit 'Save', class: 'ui purple big basic button'
