--- a/app/views/partials/_stamp.html.haml
+++ b/app/views/partials/_stamp.html.haml
@@ -1,4 +1,4 @@
-= link_to stamp_path(stamp), class: "btn #{btn_class}" do
+= link_to label_stamp_path(stamp), class: "btn #{btn_class}" do
   = stamp.label.name
      
   \#{stamp.percentage}
