--- a/app/views/stamps/labels/new.html.haml
+++ b/app/views/stamps/labels/new.html.haml
@@ -55,7 +55,7 @@
         %div.ui.grid
           - @stamp.siblings.accepted.each do |sibling|
             %div.four.wide.column
-              = link_to stamp_path(sibling.id) do
+              = link_to label_stamp_path(sibling.id) do
                 %h5.ui.middle.aligned.header
                   = sibling.label.name
             %div.twelve.wide.column
@@ -75,7 +75,7 @@
         %div.ui.grid
           - @stamp.siblings.in_progress.each do |sibling|
             %div.four.wide.column
-              = link_to stamp_path(sibling.id) do
+              = link_to label_stamp_path(sibling.id) do
                 %h5.ui.middle.aligned.header
                   = sibling.label.name
             %div.twelve.wide.column
