--- a/app/views/stamps/labels/show.html.haml
+++ b/app/views/stamps/labels/show.html.haml
@@ -35,7 +35,7 @@
         %div.ui.grid
           - @stamp.siblings.accepted.each do |sibling|
             %div.four.wide.column
-              =link_to stamp_path(sibling.id) do
+              =link_to label_stamp_path(sibling.id) do
                 %h5.ui.middle.aligned.header
                   = sibling.label.name
             %div.twelve.wide.column
@@ -55,7 +55,7 @@
         %div.ui.grid
           - @stamp.siblings.in_progress.each do |sibling|
             %div.four.wide.column
-              =link_to stamp_path(sibling.id) do
+              =link_to label_stamp_path(sibling.id) do
                 %h5.ui.middle.aligned.header
                   = sibling.label.name
             %div.twelve.wide.column
@@ -67,7 +67,7 @@
                       \%
     - if user_signed_in?
       %div.ui.basic.segment{style: "padding: 0;"}
-        = link_to new_stamp_path(domain_name: @stamp.domain.name) do
+        = link_to new_label_stamp_path(domain_name: @stamp.domain.name) do
           %button.ui.purple.basic.big.button
             Add Stamp
   - unless @stamp.in_progress?
