--- a/app/views/apps/show.html.haml
+++ b/app/views/apps/show.html.haml
@@ -26,37 +26,37 @@
         %div.ui.basic.segment{style: 'padding: 0;'}
           %h2
             Flags
-            %i.info.small.blue.circle.icon.activating.element{data: {content: "TODO: Add description", position: "right center"}}
+            %i.info.small.blue.circle.icon.activating.element{ data: { content: "TODO: Add description", position: "right center" } }
         %div.ui.segment{style: 'padding-bottom: 3rem;'}
           %table.ui.celled.table{style: 'margin-bottom: 1px;'}
             %tbody
               %tr
                 %td{ class: ('selected' if @app.flag_stamp.internet) }
                   Internet
-                  %i.info.circle.icon.small.link{"data-content" => "Allow connections to the Internet.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow connections to the Internet.', variation: 'mini' } }
                 %td{ class: ('selected' if @app.flag_stamp.lan) }
                   LAN
-                  %i.info.circle.icon.small.link{"data-content" => "Allow connections to the local area network.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow connections to the local area network.', variation: 'mini' } }
                 %td{ class: ('selected' if @app.flag_stamp.localhost) }
                   Localhost
-                  %i.info.circle.icon.small.link{"data-content" => "Allow connections to the local host.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow connections to the local host.', variation: 'mini' } }
               %tr
                 %td{ class: ('selected' if @app.flag_stamp.prompt) }
                   Prompt
-                  %i.info.circle.icon.small.link{"data-content" => "Prompt for decisions on new connections.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Prompt for decisions on new connections.', variation: 'mini' } }
                 %td{ class: ('selected' if @app.flag_stamp.blacklist) }
                   Blacklist
-                  %i.info.circle.icon.small.link{"data-content" => "Allow all connections except those explicitly denied.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow all connections except those explicitly denied.', variation: 'mini' } }
                 %td{ class: ('selected' if @app.flag_stamp.whitelist) }
                   Whitelist
-                  %i.info.circle.icon.small.link{"data-content" => "Block all connections except those explicitly allowed.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Block all connections except those explicitly allowed.', variation: 'mini' } }
               %tr
                 %td{ class: ('selected' if @app.flag_stamp.p2p) }
                   P2P
-                  %i.info.circle.icon.small.link{"data-content" => "Allow program to directly communicate with peers (ie. anyone), without resolving DNS first.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow program to directly communicate with peers (ie. anyone), without resolving DNS first.', variation: 'mini' } }
                 %td{ class: ('selected' if @app.flag_stamp.server) }
                   Server
-                  %i.info.circle.icon.small.link{"data-content" => "Allow program to accept incoming connections and act as a server for other devices.", "data-variation" => "mini"}
+                  %i.info.circle.icon.small.link{ data: { content: 'Allow program to accept incoming connections and act as a server for other devices.', variation: 'mini' } }
                 %td{style: 'background-color: lightgray;'}
 
 :javascript
@@ -70,7 +70,7 @@
       %div.ui.basic.segment{style: 'padding: 0;'}
         %h2
           Identifier
-          %i.info.small.blue.circle.icon.activating.element{data: {content: "Add users to your feed",position: "right center"}}
+          %i.info.small.blue.circle.icon.activating.element{ data: {content: "Add users to your feed",position: "right center"}}
       %div.ui.segments
         %div.ui.segment
           %div.ui.grid
