--- a/app/views/apps/index.html.haml
+++ b/app/views/apps/index.html.haml
@@ -1,4 +1,4 @@
-%div.ui.middle.aligned.centered.container{style: 'cursor: pointer;'}
+%div.ui.middle.aligned.centered.container{style: 'cursor: pointer; margin-bottom: 10rem;'}
   %h1
     All Apps:
     = link_to 'New App', new_app_path, class: 'ui basic purple right floated massive button'
@@ -17,7 +17,7 @@
       - @apps.each do |app|
         %tr{ onclick: "location.href='#{app_path(app)}'" }
           %td
-            %h4.ui.purple.header 
+            %h4.ui.purple.header
               = app.name
           %td
             = app.description
