--- a/app/views/stamps/flags/show.html.haml
+++ b/app/views/stamps/flags/show.html.haml
@@ -10,6 +10,6 @@
         or
       %div.middle.aligned.row
         %div.column{style: 'padding-right: 30px;'}
-          = render 'partials/flag_stamp', choose_me: true
+          = render 'partials/flag_stamp', choose_me: true, stamp: @stamp
         %div.column{style: 'padding-left: 30px;'}
-          = render 'partials/flag_stamp', skip_card: true
+          = render 'partials/flag_stamp', skip_card: true, stamp: @stamp
