--- a/app/views/domains/index.html.haml
+++ b/app/views/domains/index.html.haml
@@ -1,4 +1,4 @@
-%div.ui.middle.aligned.centered.container{style: 'cursor: pointer; margin-bottom: 10rem;'}
+%div.ui.middle.aligned.centered.container{style: 'cursor: pointer;'}
   %h1
     All Domain:
     = link_to 'New Domain', new_domain_path, class: 'ui basic purple right floated massive button'
