--- a/app/views/apps/show.html.haml
+++ b/app/views/apps/show.html.haml
@@ -11,15 +11,8 @@
         = @app.description
     %div.six.wide.column
       %div.ui.basic.segment
-        %i.big.icons
-          %i.linux.icon{ class: ('disabled' unless @app.linux) }
-          %i.corner.icon{ class: @app.linux ? 'checkmark green' : 'x disabled' }
-        %i.big.icons
-          %i.apple.icon{ class: ('disabled' unless @app.macos) }
-          %i.corner.icon{ class: @app.macos ? 'checkmark green' : 'x disabled' }
-        %i.big.icons
-          %i.windows.icon{ class: ('disabled' unless @app.windows) }
-          %i.corner.icon{ class: @app.windows ? 'checkmark green' : 'x disabled' }
+        = render 'partials/icons', app: @app
+
   %div.ui.two.column.grid
     - if @app.flag_stamp.present?
       %div.column
