--- a/app/views/apps/index.html.haml
+++ b/app/views/apps/index.html.haml
@@ -10,7 +10,7 @@
         %th
           Description
         %th
-          Operating System
+          Operating Systems
         %th
           User
     %tbody
@@ -22,6 +22,6 @@
           %td
             = app.description
           %td
-            = render 'partials/icons', app: app
+            = render 'apps/partials/icons', app: app
           %td
             = app.user.username
