--- a/app/views/stamps/flags/partials/_flag_stamp.html.haml
+++ b/app/views/stamps/flags/partials/_flag_stamp.html.haml
@@ -55,7 +55,7 @@
               Show Stamp
         -if operating_system
           %div.ui.bottom.right.attached.label{style: 'padding: 5px;'}
-            = render 'partials/icons', app: @stamp.app
+            = render 'apps/partials/icons', app: @stamp.app
 
 :javascript
   $('.info.circle.icon.link')
