--- a/app/views/stamps/labels/new.html.haml
+++ b/app/views/stamps/labels/new.html.haml
@@ -60,7 +60,7 @@
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.purple.small.progress{style: "background: white;"}
-                  %div.bar{style: "width: #{sibling.percentage}%; z-index: 10; "}
+                  %div.bar.second-bar{style: "width: #{sibling.percentage}%"}
                     %div.progress
                       = sibling.percentage
                       \%
@@ -80,7 +80,7 @@
             %div.twelve.wide.column
               %div.bar.float.right
                 %div.ui.teal.small.progress{style: "background: white;"}
-                  %div.bar{style: "width: #{sibling.percentage}%; z-index: 10; "}
+                  %div.bar.second-bar{style: "width: #{sibling.percentage}%"}
                     %div.progress
                       = sibling.percentage
                       \%
