--- a/app/views/stamps/flags/partials/_flag_stamp.html.haml
+++ b/app/views/stamps/flags/partials/_flag_stamp.html.haml
@@ -3,7 +3,7 @@
 - operating_system ||= nil
 
 - if skip_card
-  %button.ui.purple.basic.big.button
+  %button.ui.purple.basic.big.button.battle-button
     Discard Me
 - else
   %div.ui.segment{style: 'padding: 3rem 0 3rem 0;'}
@@ -44,17 +44,17 @@
               %i.info.circle.icon.small.link{ data: { content: 'Allow program to accept incoming connections and act as a server for other devices.', variation: 'mini' } }
             %td{style: 'background-color: lightgray;'}
         - if choose_me
-          %div.ui.bottom.left.attached.label{style: 'padding: 4px;'}
-            %button.ui.purple.basic.big.button{style: 'margin: 0;'}
+          %div.ui.bottom.left.attached.label
+            %button.ui.purple.basic.big.button.battle-button
               Choose Me
         %div{class: %w[ui large top right attached label].push(class_for(stamp.state))}
           = stamp.state.titleize
         - if show_stamp
-          %div.ui.bottom.left.attached.label{style: 'padding: 4px;'}
-            = link_to flag_stamp_path(stamp), class: 'ui basic purple button', style: 'margin: 0;' do
+          %div.ui.bottom.left.attached.label
+            = link_to flag_stamp_path(stamp), class: 'ui basic purple button battle-button' do
               Show Stamp
         -if operating_system
-          %div.ui.bottom.right.attached.label{style: 'padding: 5px;'}
+          %div.ui.bottom.right.attached.label
             = render 'apps/partials/icons', app: @stamp.app
 
 :javascript
